force-app/main/default/objects/NIS2_Register__c/NIS2_Register__c.object-meta.xml
<CustomObject>
    <description>NIS2 Register object</description>
    <label>NIS2 Register</label>
    <nameField>
        <displayFormat>NIS2-{000000}</displayFormat>
        <label>NIS2 Register Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIS2 Registers</pluralLabel>
    <recordTypes/>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>