force-app/main/default/objects/NIS2_Register__c/fields/Adoption_Status__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Status__c</fullName>
    <label>Adoption Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotStarted</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Adopted</fullName>
            </value>
            <value>
                <fullName>NotApplicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>