force-app/main/default/objects/NIS2_Register__c/fields/Answered_At__c.field-meta.xml
<CustomField>
    <fullName>Answered_At__c</fullName>
    <label>Answered At</label>
    <type>DateTime</type>
</CustomField>