force-app/main/default/objects/NIS2_Register__c/fields/Approval_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comment__c</fullName>
    <label>Approval Comment</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>