force-app/main/default/objects/NIS2_Register__c/fields/Approver_User__c.field-meta.xml
<CustomField>
    <fullName>Approver_User__c</fullName>
    <label>Approver User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Related Decisions</relationshipLabel>
    <relationshipName>Decisions</relationshipName>


 
</CustomField>