force-app/main/default/objects/NIS2_Register__c/fields/Aware_At__c.field-meta.xml
<CustomField>
    <fullName>Aware_At__c</fullName>
    <label>Aware At</label>
    <type>DateTime</type>
</CustomField>