force-app/main/default/objects/NIS2_Register__c/fields/Decision_description__c.field-meta.xml
<CustomField>
    <fullName>Decision_description__c</fullName>
    <label>Decision description</label>
    <type>TextArea</type>
</CustomField>