force-app/main/default/objects/NIS2_Register__c/fields/Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type__c</fullName>
    <label>Decision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>