force-app/main/default/objects/NIS2_Register__c/fields/DPO_User__c.field-meta.xml
<CustomField>
    <fullName>DPO_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPO User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Related DPO Requests</relationshipLabel>
    <relationshipName>DPORequests</relationshipName>
    <type>Lookup</type>
</CustomField>