force-app/main/default/objects/NIS2_Register__c/fields/Evidence_Required__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Required__c</fullName>
    <label>Evidence Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>