force-app/main/default/objects/NIS2_Register__c/fields/IncidentTask1__c.field-meta.xml
<CustomField>
    <fullName>IncidentTask1__c</fullName>
    <description>campo ausiliario dove mettere l&apos;id del task di triage</description>
    <label>IncidentTask1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>