force-app/main/default/objects/NIS2_Register__c/fields/IncidentTask2__c.field-meta.xml
<CustomField>
    <fullName>IncidentTask2__c</fullName>
    <description>campo ausiliario per salvare l&apos;id di un task collegato con un incident</description>
    <label>IncidentTask2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>