force-app/main/default/objects/NIS2_Register__c/fields/Measure_Class__c.field-meta.xml
<CustomField>
    <fullName>Measure_Class__c</fullName>
    <label>Measure Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Essential</fullName>
            </value>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>