force-app/main/default/objects/NIS2_Register__c/fields/Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>Measure_Code__c</fullName>
    <label>Measure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>