force-app/main/default/objects/NIS2_Register__c/fields/Measure_description__c.field-meta.xml
<CustomField>
    <fullName>Measure_description__c</fullName>
    <label>Measure description</label>
    <type>TextArea</type>
</CustomField>