force-app/main/default/objects/NIS2_Register__c/fields/NotAdopted_Justification__c.field-meta.xml
<CustomField>
    <fullName>NotAdopted_Justification__c</fullName>
    <label>Not Adopted Justification</label>

    <type>TextArea</type>
 
</CustomField>