force-app/main/default/objects/NIS2_Register__c/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>