force-app/main/default/objects/NIS2_Register__c/fields/Personal_Data_Involved__c.field-meta.xml
<CustomField>
    <fullName>Personal_Data_Involved__c</fullName>
    <label>Personal Data Involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>ToAssess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>