force-app/main/default/objects/NIS2_Register__c/fields/Protocol_Number__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Number__c</fullName>
    <label>Protocol Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>