force-app/main/default/objects/NIS2_Register__c/fields/Regime_NIS2__c.field-meta.xml
<CustomField>
    <fullName>Regime_NIS2__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Regime NIS2</label>
    <type>Checkbox</type>
</CustomField>