force-app/main/default/objects/NIS2_Register__c/fields/Regime_Parallel__c.field-meta.xml
<CustomField>
    <fullName>Regime_Parallel__c</fullName>
 
    <label>Regime Parallel</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>