force-app/main/default/objects/NIS2_Register__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NIS2 Registers</relationshipLabel>
    <relationshipName>NIS2_Registers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>