force-app/main/default/objects/NIS2_Register__c/fields/Related_communication__c.field-meta.xml
<CustomField>
    <fullName>Related_communication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Communication</label>
    <referenceTo>NIS2_Register__c</referenceTo>
    <relationshipLabel>Related Communications</relationshipLabel>
    <relationshipName>Related_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>