force-app/main/default/objects/NIS2_Register__c/fields/Related_DPO_Requests__c.field-meta.xml
<CustomField>
    <fullName>Related_DPO_Requests__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related DPO Requests</label>
    <referenceTo>NIS2_Register__c</referenceTo>
    <relationshipLabel>Related DPO Requests</relationshipLabel>
    <relationshipName>NIS2_Registers</relationshipName>
    <type>Lookup</type>
</CustomField>