force-app/main/default/objects/NIS2_Register__c/fields/Related_Incident__c.field-meta.xml
<CustomField>
    <fullName>Related_Incident__c</fullName>
    <label>Related Incident</label>
    <type>Lookup</type>
    <referenceTo>NIS2_Register__c</referenceTo>
    <relationshipLabel>Related Decisions</relationshipLabel>
    <relationshipName>Decisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>