force-app/main/default/objects/NIS2_Register__c/fields/Related_Measure__c.field-meta.xml
<CustomField>
    <fullName>Related_Measure__c</fullName>
    <label>Related Measure</label>
    <type>Lookup</type>
    <referenceTo>NIS2_Register__c</referenceTo>
    <relationshipLabel>Related Decisions</relationshipLabel>
    <relationshipName>Decisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>