force-app/main/default/objects/NIS2_Register__c/fields/Related_Risk__c.field-meta.xml
<CustomField>
    <fullName>Related_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Risk</label>
    <referenceTo>NIS2_Register__c</referenceTo>
    <relationshipLabel>NIS2 Risks</relationshipLabel>
    <relationshipName>Related_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>