force-app/main/default/objects/NIS2_Register__c/fields/Related_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Related_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related DPO Requests</relationshipLabel>
    <relationshipName>DPORequests</relationshipName>
    <type>Lookup</type>
</CustomField>