force-app/main/default/objects/NIS2_Register__c/recordTypes/Communication.recordType-meta.xml
<RecordType>
    <fullName>Communication</fullName>
    <active>true</active>
    <description>Record Type for Communication</description>
    <label>Communication</label>
</RecordType>