force-app/main/default/objects/NIS2_Register__c/recordTypes/Decision.recordType-meta.xml
<RecordType>
    <fullName>Decision</fullName>
    <active>true</active>
    <description>Record Type for Decision</description>
    <label>Decision</label>
</RecordType>