force-app/main/default/objects/NIS2_Register__c/recordTypes/DPORequest.recordType-meta.xml
<RecordType>
    <fullName>DPORequest</fullName>
    <active>true</active>
    <description>Record Type for DPO Request</description>
    <label>DPORequest</label>
</RecordType>