force-app/main/default/objects/NIS2_Register__c/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <description>Record Type for Incident</description>
    <label>Incident</label>
</RecordType>