force-app/main/default/objects/NIS2_Register__c/recordTypes/Measure.recordType-meta.xml
<RecordType>
    <fullName>Measure</fullName>
    <active>true</active>
    <description>Record Type for Measure</description>
    <label>Measure</label>
</RecordType>