force-app/main/default/objects/NIS2_Register__c/recordTypes/Risk.recordType-meta.xml
<RecordType>
    <fullName>Risk</fullName>
    <active>true</active>
    <description>Record Type for Risk</description>
    <label>Risk</label>
</RecordType>