force-app/main/default/objects/NIS2_Register__c/validationRules/Communication_Requires_Related_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Communication_Requires_Related_Record</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Related_Incident__c),
    ISBLANK(Related_Measure__c),
    ISBLANK(Related_Supplier__c),
    ISBLANK( Related_Account__c ),
     contains(RecordType.DeveloperName ,&apos;ommunication&apos;)
)</errorConditionFormula>
    <errorMessage>At least one of Related Incident, Related Measure, Related account or Related Supplier is required.</errorMessage>
</ValidationRule>