force-app/main/default/objects/NIS2_Register__c/validationRules/Dec_Rejected_Req_Approval_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Dec_Rejected_Req_Approval_Comment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Approval_Status__c, "Rejected"),
    ISBLANK(Approval_Comment__c)
)</errorConditionFormula>
    <errorMessage>When Approval Status is "Rejected", Approval Comment is required.</errorMessage>
</ValidationRule>