force-app/main/default/objects/NIS2_Register__c/validationRules/DPORequest_Answered_Requires_Ans.validationRule-meta.xml
<ValidationRule>
    <fullName>DPORequest_Answered_Requires_Ans</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(DPO_Status__c, &quot;Answered&quot;),
        ISPICKVAL(DPO_Status__c, &quot;Closed&quot;)
    ),
    OR(
        ISBLANK(Answer__c),
        ISBLANK(Answered_At__c)
    )
)</errorConditionFormula>
    <errorMessage>When DPO Status is &quot;Answered&quot; or &quot;Closed&quot;, both Answer and Answered At are required.</errorMessage>
</ValidationRule>