force-app/main/default/objects/NIS2_Register__c/validationRules/DPORequest_Answered_Requires_Answer_And_Answered_At.validationRule-meta.xml
<ValidationRule>
    <fullName>DPOReq_Answered_Req_At</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(DPO_Status__c, "Answered"),
        ISPICKVAL(DPO_Status__c, "Closed")
    ),
    OR(
        ISBLANK(Answer__c),
        ISBLANK(Answered_At__c)
    )
)</errorConditionFormula>
    <errorMessage>When DPO Status is "Answered" or "Closed", both Answer and Answered At are required.</errorMessage>
</ValidationRule>