force-app/main/default/objects/NIS2_Register__c/validationRules/Meas_NotApplicable_Req_Justification.validationRule-meta.xml
<ValidationRule>
    <fullName>Meas_NotApplicable_Req_Justification</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Adoption_Status__c, &quot;NotApplicable&quot;),
    ISBLANK(NotAdopted_Justification__c)
)</errorConditionFormula>
    <errorMessage>When Adoption Status is &quot;NotApplicable&quot;, Not Adopted Justification is required.</errorMessage>
</ValidationRule>