force-app/main/default/objects/NIS2_Register__c/validationRules/Measure_Adopted_Req_Adoption_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Measure_Adopted_Req_Adoption_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      RecordType.DeveloperName = &quot;Measure&quot;,
      ISPICKVAL(Adoption_Status__c, &quot;Adopted&quot;),
      ISBLANK(Adoption_Date__c)
    )</errorConditionFormula>
    <errorMessage>When Adoption Status is &quot;Adopted&quot;, Adoption Date is required.</errorMessage>
</ValidationRule>