force-app/main/default/objects/NIS2_Register__c/validationRules/Measure_Adopted_Requires_Adoption_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Measure_Adopted_Req_Adoption_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      RecordType.DeveloperName = "Measure",
      ISPICKVAL(Adoption_Status__c, "Adopted"),
      ISBLANK(Adoption_Date__c)
    )
</errorConditionFormula>
    <errorMessage>When Adoption Status is "Adopted", Adoption Date is required.</errorMessage>
</ValidationRule>