force-app/main/default/objects/NIS2_Register__c/validationRules/Measure_NotApplicable_Requires_Justification.validationRule-meta.xml
<ValidationRule>
    <fullName>Meas_NotApplicable_Req_Justification</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Adoption_Status__c, "NotApplicable"),
    ISBLANK(NotAdopted_Justification__c)
)</errorConditionFormula>
    <errorMessage>When Adoption Status is "NotApplicable", Not Adopted Justification is required.</errorMessage>
</ValidationRule>